Fixed sidebar view screwup on mobile

--- a/public/src/scss/sidebar.scss
+++ b/public/src/scss/sidebar.scss
@@ -96,10 +96,10 @@
 		top: 0;
 		left: 0;
 		padding: 12px 10px 6px 13px;
+	}
 
-		.app-container--with-notice & {
-			top: 52px;
-		}
+	.app-container--with-notice &__open {
+		top: 40px;
 	}
 
 	&__cog {
